Fixed shadow clipping

--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,8 @@ p {
     padding-left: 2%;
     padding-right: 2%;
 
-    padding-top: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 #header {
@@ -213,6 +214,9 @@ p {
     background-image: url(../images/bkg.svg);
 }
 #about {
+
+    padding-top: 50px;
+    padding-bottom: 0;
 
     /*
     background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
